to fix select styling on safari

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -119,6 +119,7 @@ button {
     font-family: 'Avenir', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     outline: 0;
+    -webkit-appearance: none;
 }
 
 /* Generic */
